--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
+* {
+  font-family: "Gowun Dodum", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.mypic {
+  width: 100%;
+  height: 200px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url("https://images.unsplash.com/photo-1601024445121-e5b82f020549?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80");
+  background-position: center;
+  background-size: cover;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  color: white;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.mypic > h1 {
+  font-size: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.mybox {
+  width: 95%;
+  max-width: 700px;
+  padding: 20px;
+  box-shadow: 0px 0px 10px 0px lightblue;
+  margin: 20px auto;
+}
+
+.mybucket {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mybucket > input {
+  width: 70%;
+}
+
+.mybox > li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 10px;
+  min-height: 48px;
+}
+
+.mybox > li > h2 {
+  max-width: 75%;
+  font-size: 20px;
+  font-weight: 500;
+  margin-right: auto;
+  margin-bottom: 0px;
+}
+
+.mybox > li > h2.done {
+  text-decoration: line-through;
 }
